add minimal test for amber modules

--- a/nodes/amber-common.xml.in
+++ b/nodes/amber-common.xml.in
@@ -17,6 +17,7 @@
 
 	<package>amber-ROLLCOMPILER-ROLLNETWORK</package>
 	<package>amber-module-ROLLCOMPILER-ROLLNETWORK</package>
+	<package>amber-roll-test</package>
 
 <post>
 </post>
