use nbcr-specific NBCR.mk

--- a/src/amber-modules/Makefile
+++ b/src/amber-modules/Makefile
@@ -58,7 +58,7 @@ REDHAT.ROOT = $(CURDIR)/../../
 
 -include $(ROCKSROOT)/etc/Rules.mk
 include Rules.mk
-include $(SDSCDEVEL)/Rules.mk
+include $(NBCRDEVEL)/NBCR.mk
 
 MODULEFILES = amber.module amber.version
 
