--- a/src/roll-test/Makefile
+++ b/src/roll-test/Makefile
@@ -58,11 +58,11 @@ REDHAT.ROOT = $(CURDIR)/../../
 
 -include $(ROCKSROOT)/etc/Rules.mk
 include Rules.mk
-include $(SDSCDEVEL)/Rules.mk
+include $(NBCRDEVEL)/NBCR.mk
 
 build:
 
-install:: typical-roll-test-install
-	perl -pi -e 's#ROLLNETWORK#$(ROLLNETWORK)#g;' $(ROOT)/$(PKGROOT)/amber.t
+install:: roll-test-install
+	$(SED) -i -e s%ROLLNETWORK%$(ROLLNETWORK)%g $(ROOT)/$(PKGROOT)/amber.t
 
 clean::
